force-app/main/default/objects/InvoiceItem__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Importe</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Fecha</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Descrip__c</fullName>
        <label>Descrip</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Factura</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Líneas de factura</relationshipLabel>
        <relationshipName>InvoiceItem</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Precio(EUR/l)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Producto</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Líneas de factura</relationshipLabel>
        <relationshipName>InvoiceItem</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Cantidad(l)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Línea de factura</label>
    <nameField>
        <displayFormat>LF-{0}</displayFormat>
        <label>Línea de factura</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Líneas de factura</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>